# automaton

./: CMakeLists.txt
include/automaton/: Automaton.hpp  AutomatonInclude.hpp  Dfa.hpp  EpsilonNfa.hpp  FaGraph.hpp  Nfa.hpp  Re.hpp
test/: CMakeLists.txt
test/sources/: FaGenerator.cpp  FaGenerator.h  TestCases.cpp  TestCases.h  test.h
test/sources/Dfa/: DfaIsAccepted.cpp  DfaMinimization.cpp  DfaRemoveUnreachableState.cpp  DfaToRG.cpp  DfaToRg.cpp  DfaToString.cpp
test/sources/EpsilonNfa/: EpsilonNfaIsAccepted.cpp  EpsilonNfaToNfa.cpp
test/sources/Nfa/: NfaToDfa.cpp
test/sources/Re/: ReIsAccepted.cpp  ReToPostfixExpression.cpp
